:sparkles: feat: Requisito 11

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: rgb(237, 237, 237);
+  background: rgb(244, 244, 244);
 }
 
 /* ------ HEADER ------ */
@@ -112,6 +112,17 @@ body {
   outline: none;
   padding: 0 5px;
   width: 18rem;
+}
+
+#input-email , #house {
+  background-color: white;
+  border: none;
+  border-radius: 8px;
+  height: 35px;
+  margin-top: 20px;
+  outline: none;
+  padding: 0 5px;
+  width: 17rem;
 }
 
 /* ------ LOGO ------ */
