--- a/style.css
+++ b/style.css
@@ -115,6 +115,14 @@ body {
   width: 18rem;
 }
 
+#input-email {
+  width: 18rem;
+}
+
+#house {
+  width: 16rem;
+}
+
 /* inputs */
 #input-email , #house {
   background-color: white;
@@ -124,7 +132,7 @@ body {
   margin-top: 20px;
   outline: none;
   padding: 0 5px;
-  width: 17rem;
+
 }
 
 #label-house {
@@ -173,9 +181,24 @@ body {
 /* container de avaliação */
 .container-evaluation {
   display: flex;
+  font-weight: 500;
   justify-content: space-between;
   margin: 10px 0;
   width: 600px;
+}
+
+/* título do textarea */
+.textarea {
+  align-self: flex-start;
+  font-weight: 500;
+  margin: 10px 0 10px 38px;
+}
+
+/* textarea */
+#comments {
+  border: none;
+  border-radius: 8px;
+  resize: none;
 }
 
 /* ------ LOGO ------ */
