--- a/style.css
+++ b/style.css
@@ -201,6 +201,11 @@ body {
   resize: none;
 }
 
+#label-infos , #info-check {
+  font-weight: 500;
+  margin: 12px 0;
+}
+
 /* ------ LOGO ------ */
 #trybewarts-forms-logo {
   height: 500px;
